--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,8 @@
     --input-color: hsl(var(--hue-color), 70%, 96%);
     --body-color: hsl(var(--hue-color), 60%, 99%);
     --container-color: #fff;
+    --scroll-bar-color: hsl(var(--hue-color),12%,99%);
+    --scroll-thumb-color: hsl(var(--hue-color),12%,80%);
 
     /*------------ font and font type ------------*/
     --body-font: 'Poppins', sans-serif;
@@ -69,6 +71,49 @@
     }
 
 
+}
+
+::-webkit-scrollbar{
+    width: .60rem;
+    background-color: var(--scroll-bar-color);
+    border-radius: .5rem;
+   
+}
+::-webkit-scrollbar-thumb{
+    background-color: var(--scroll-thumb-color);
+    border-radius: .5rem;
+}
+ ::-webkit-scrollbar-thumb:hover{
+    background-color: var(--text-color-light);
+} 
+
+/* ---------------variables dark mode theme---------- */
+body.dark-theme{
+    --first-color-second: hsl(var(--hue-color), 30%, 8%);
+    --title-color: hsl(var(--hue-color), 8%, 95%);
+    --text-color: hsl(var(--hue-color), 8%, 75%);
+    --input-color: hsl(var(--hue-color), 29%, 16%);
+    --body-color: hsl(var(--hue-color), 28%, 12%);
+    --container-color: hsl(var(--hue-color), 29%,16%);
+    --scroll-bar-color: hsl(var(--hue-color),12%,48%);
+    --scroll-thumb-color: hsl(var(--hue-color),12%,36%);
+
+}
+
+/*---------- button dark mode----- */
+.nav__btns{
+display: flex;
+align-items: center;
+}
+
+.change-theme{
+   font-size: 1.25rem;
+   color: var(--title-color);
+   margin-right: var(--mb-1);
+   cursor: pointer;
+}
+.change-theme:hover{
+    color: var(--first-color);
 }
 
 /*------------------------ Base---------------- */
@@ -231,6 +276,14 @@ img {
     bottom: 0;
 }
 
+/* active */
+.active-link{
+    color: var(--first-color);
+}
+.scroll-header{
+    box-shadow: 0 -1px 4px rgba(0, 0,0, .15) ;
+}
+ 
 
 
 
@@ -516,15 +569,16 @@ img {
 
 .portfolio__container{
     overflow: initial;
+    /* background-color: aqua; */
 }
 .portfolio__content{
-    padding: 0 1.5rem;
+    padding: 4rem;
 }
 .portfolio__img{
-   width:265px;
+   width: 220px;
     border-radius: .5rem;
-    justify-self:center;
-    height: 265px;
+    margin: auto;
+    height: 220px;
     background: url(../img/bootstrap.png);
     background-size:100% 500%;
     background-repeat: no-repeat;
@@ -582,3 +636,154 @@ img {
 .portfolio__button:hover .button__icon{
     transform: translateX(.25rem);
 }
+
+.swiper-button-prev::after,
+.swiper-button-next::after{
+    content: ''!important;
+}
+.swiper-portfolio-icon{
+    font-size: 2rem;
+    color: var(--first-color);
+}
+.swiper-button-prev{
+    left: -2rem;
+}
+.swiper-button-next{
+    right: -2rem;
+}
+
+ .swiper-pagination{
+    bottom: 5rem;
+}
+
+/* ------------------contact me------------------------ */
+.contact__container{
+    row-gap: 3rem;
+}
+
+.contact__information{
+    display: flex;
+    margin-bottom: var(--mb-2);
+}
+
+.contact__icon{
+    font-size: 2rem;
+    color: var(--first-color);
+    margin-right: var(--mb-0-75);
+}
+.contact__title{
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+}
+.contact__subtitle{
+    font-size:var(--small-font-size) ;
+    color: var(--text-color-light);
+
+}
+.contact__content{
+    background-color: var(--input-color);
+    border-radius: .5rem;
+    padding: .75rem 1rem .25rem;
+    margin-bottom: var(--mb-0-75);
+}
+
+.contact__lable{
+    font-size: var(--smaller-font-size);
+    color: var(--title-color);
+}
+
+.contact__input{
+    width: 100%;
+    background-color: var(--input-color);
+    color: var(--text-color);
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    border: none;
+    outline: none;
+    padding: .25rem .5rem .5rem 0;
+
+
+}
+
+/*--------- footer -----------------*/
+.footer{
+    padding-top: 2rem;
+
+}
+.footer__container{
+    row-gap: 3.5rem;
+}
+.footer__bg{
+    background-color:var(--first-color-second) ;
+    padding: 2rem 0 3rem;
+
+}
+.footer__title{
+    font-size: var(--h1-font-size);
+    margin-bottom:var(--mb-0-25) ;
+
+}
+.footer__subtitle{
+    font-size: var(--small-font-size);
+
+}
+.footer__links{
+    display: flex;
+    flex-direction: column;
+    row-gap: 1.5rem;
+}
+.footer__link:hover{
+    color: var(--first-color-lighter);
+}
+.footer__social{
+    font-size: 1.25rem;
+    margin-right: var(--mb-1-5);
+
+}
+.footer__social:hover{
+    color: var(--first-color-lighter);
+}
+.footer__copy{
+ font-size: var(--smaller-font-size);
+ text-align:center;   
+ color: var(--text-color-light);
+ margin-top: var(--mb-3);
+}
+.footer__title,.footer__subtitle,.footer__link,.footer__social{
+    color: #fff;
+}
+
+.scrollup{
+    position: fixed;
+    right: 1rem;
+    bottom: -20%;
+    background-color: var(--first-color);
+    opacity: .8;
+    padding: .2rem;
+    border-radius: .4rem;
+    z-index: var(--z-tooltip);
+    transition: .4s;
+    scroll-behavior: smooth!important;
+}
+.scrollup:hover{
+    background-color: var(--first-color-alt);
+}
+.scrollup__icon{
+    font-size: 1.5rem;
+    color: #fff;
+}
+
+.show-scroll{
+    bottom:5rem;
+}
+
+/*-------------------- media ------------------- */
+@media (max-width: 350px) {
+    .container{
+        margin-left: var(--mb-1);
+        margin-right: var(--mb-1);
+    }
+}
+
+
+
